<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--  app -->
    <string name="app_name">Pretty Painter</string>
    <string name="app_version">Version: %1$s</string>
    <string name="about_text">Free open source graphics
    editor under MIT License</string>
    <string name="app_developers">Developer:
    \nArthur Bikmullin (@devolonter)
    \n\nCo-developers:
    \nConstantine Chartomatzis, Lioncash
    \n\nLocalization: 
    \nOlga Bikmullina (@AhNinniah)</string>
    
    <!--  dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more">More</string>
    <string name="which_app">Complete action using</string>
    <string name="clear_bitmap_prompt_title">Clear</string>
    <string name="clear_bitmap_prompt">Do you want to clear canvas?</string>    
    <string name="saving_title">Saving</string>
    <string name="saving_to_sd">Picture is saving. Please wait...</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="aply_wallpaper">Apply wallpaper. Please wait...</string>
    <string name="exit_app_prompt_title">Exit</string>
	<string name="exit_app_prompt">Do you want to save picture before the exit?</string>
	<string name="share_prompt_title">Share</string>
	<string name="share_prompt">Do you want to save image before share it?</string>
	<string name="open_prompt_title">Open via</string>
	<string name="open_prompt">Do you want to save image before open another file?</string>
	<string name="share_image_title">Share via</string>
	<string name="select_language_title">Select language</string>
	<string name="copy_file_title">Copy files</string>
    
    <!-- menu -->
    <string name="menu_brush">Brush</string>
    <string name="menu_rotate">Rotate</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_open">Open</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_set_wallpaper">Set as Wallpaper</string>
    <string name="menu_file">File</string>
    
    <!--  brush setup -->
    <string name="brush_size">Brush size</string>
    <string name="blur_radius">Blur radius</string>
    <string name="blur_style">Blur style</string>
    <string name="blur_type_select">Select blur type</string>
    <string-array name="blur_types">
        <item>None</item>
        <item>Normal</item>
        <item>Solid</item>
        <item>Outer</item>
        <item>Inner</item>
    </string-array>
    <string name="brush_color">Brush color</string>
    <string name="color_pick">Pick a color</string> 
    
    <!-- toasts -->      	
	<string name="invalid_file">File format is invalid</string>
	<string name="file_not_found">File not found</string>
	<string name="sd_card_not_writeable">SD card not available for recording</string>
    <string name="sd_card_not_available">SD card not available</string>
    <string name="wallpaper_setted">Wallpaper was successfully setted</string>
    <string name="wallpaper_error">Wallpaper was not setted. Error occured</string>
    <string name="file_saved_in">File was saved in %1$s</string>
    
    <!-- settings -->
    <string name="settings_version">version</string>	
    <string name="settings_orientation">orientation</string>
    <string name="settings_last_picture">lastPicture</string>
    <string name="settings_brush_size">brushSize</string>
    <string name="settings_brush_color">brushColor</string>
    <string name="settings_brush_blur_style">brushBlurStyle</string>
    <string name="settings_brush_blur_radius">brushBlurRadius</string>
    <string name="settings_brush_type">brushType</string>
    <string name="settings_force_open_file">forceOpenFile</string>
    
    <!-- language -->
    <string-array name="languages">
    	<item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="locales">
    	<item>en</item>
        <item>ru</item>
    </string-array>
    
    <!-- backup options -->
    <string-array name="backup_opened_options">
    	<item>Only from other folders</item>
        <item>Always</item>
        <item>Never</item>
    </string-array>
    <string-array name="backup_opened_options_codes">
    	<item>10</item>
        <item>20</item>
        <item>100</item>
    </string-array>
    
    <!-- exit options -->
    <string-array name="before_exit_options">
    	<item>Submit to save file</item>
        <item>Save working file</item>
        <item>No action</item>
    </string-array>
    <string-array name="before_exit_options_codes">
    	<item>10</item>
        <item>20</item>
        <item>100</item>
    </string-array>
    
    <!-- volume shortcuts options -->
    <string-array name="volume_buttons_options">
    	<item>Change brush size</item>
        <item>Undo/Redo</item>
    </string-array>
    <string-array name="volume_buttons_options_codes">
    	<item>10</item>
        <item>20</item>
    </string-array>
    
    <!-- preferences -->
    <string name="preferences_interface_category">Interface</string>
    <string name="preferences_behavior_category">Behavior</string>
    <string name="preferences_shortcuts_category">Shortcuts</string>
    <string name="preferences_backup_category">Backup</string>    
    <string name="preferences_about_category">About</string>    
    
    <string name="preferences_language">preferencesLanguage</string>
    <string name="preferences_language_title">Language</string>
    <string name="preferences_language_summary">Set interface language. Restart needed</string>
    
    <string name="preferences_last_file">lastFile</string>
    <string name="preferences_last_file_title">Open last file</string>
    <string name="preferences_last_file_summary">Open last working file on startup</string>
    
    <string name="preferences_backup_openeded_file">backupOpenningFile</string>
    <string name="preferences_backup_openeded_file_title">Opened files backup</string>
    <string name="preferences_backup_openeded_file_summary">Copy opened files in the application folder</string>
    
    <string name="preferences_tooltips">preferencesTooltips</string>
    <string name="preferences_tooltips_title">Show tooltips</string>
    <string name="preferences_tooltips_summary">Show tricks and tips on startup</string>
    
    <string name="preferences_shake">preferencesShake</string>
    <string name="preferences_shake_title">Shake to clear</string>
    <string name="preferences_shake_summary">Clear canvas during device shaking</string>
    
    <string name="preferences_about">preferencesAbout</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_about_summary">Information about application</string>
    
    <string name="preferences_before_exit">preferencesBeforeExit</string>
    <string name="preferences_before_exit_title">Action before exit</string>
    <string name="preferences_before_exit_summary">Action before application exit</string>
    
    <string name="preferences_volume_shortcuts">preferencesVolumeShortcuts</string>
    <string name="preferences_volume_shortcuts_title">Volume buttons</string>
    <string name="preferences_volume_shortcuts_summary">Set action for volume buttons</string>
</resources>
